# Guide-GPU_Programming

./: README.md
chapters/0-Setup/: .gitignore  README.md
chapters/1-Library/: README.md  pyproject.toml
chapters/1-Library/mandybrot_gpu/: __init__.py  sample.py
chapters/1-Library/scripts/: run.py
chapters/2-Images/: README.md  pyproject.toml
chapters/2-Images/mandybrot_gpu/: sample.py
chapters/2-Images/scripts/: run.py
