[tool.poetry]
name = "mandybrot-gpu"
version = "0.1.0"
description = "Plot the magical Mandelbrot set with a GPU."
authors = ["FreddyWordingham <freddy@digilab.co.uk>"]
readme = "README.md"
packages = [{include = "mandybrot_gpu"}]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^9.5.0"
numpy = "^1.24.2"
pyopencl = "^2022.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
